# DBpriotity2030

./: CMakeLists.txt  ServerDB.cpp  ServerDB.hpp  a.out  main  main.cpp  test
configs/: DBconfig.json
